--- a/App/ITalker/build.gradle
+++ b/App/ITalker/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     repositories {
+        google()
         jcenter()
-        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:8.5.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,9 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        mavenCentral()
-        maven { url "https://www.jitpack.io" }
     }
 }
 
@@ -25,12 +25,12 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext{
-    // 版本号相关
-    versionCode = 1;
+ext {
+    //版本号相关
+    versionCode = 1.0;
     versionName = '1.0.0'
 
-    // 相关依赖库版本
-    supportVersion = '25.3.1'
-    butterknifeVersion = '8.5.1'
+    //相关依赖库版本
+    supportVersion = '28.0.0'
+
 }
