--- a/App/ITalker/build.gradle
+++ b/App/ITalker/build.gradle
@@ -5,10 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -32,5 +33,6 @@ ext {
 
     //相关依赖库版本
     supportVersion = '28.0.0'
+    butterknifeVersion = '8.8.1'
 
 }
