--- a/App/ITalker/build.gradle
+++ b/App/ITalker/build.gradle
@@ -35,4 +35,7 @@ ext {
     supportVersion = '28.0.0'
     butterknifeVersion = '8.8.1'
 
+    geniusVersion = '2.1.1'
+    glideVersion = '4.8.0'
+    circleimageviewVersion = '2.2.0'
 }
